@@ -1,4 +1,4 @@
-# Anjuta Version 1.2.1 
+# Anjuta Version 1.2.2 
 Compatibility Level: 1 
 
 <PROJECT_DESCRIPTION_START>
@@ -23,7 +23,7 @@ a GTK 2 based scientific calculator
 
 props.file.type=project
 
-anjuta.version=1.2.1
+anjuta.version=1.2.2
 anjuta.compatibility.level=1
 
 project.name=galculator
