@@ -6,12 +6,12 @@ RunInTerminal=true
 ShowLocals=true
 
 [filenumbers]
-0=9
-1=19
-2=17
-3=13
-4=14
-5=87
+0=182
+1=375
+2=5
+3=1056
+4=13
+5=285
 6=91
 7=34
 8=33
@@ -23,7 +23,7 @@ ShowLocals=true
 0=
 1=
 2=
-3=
+3=1055,
 4=
 5=
 6=
@@ -62,7 +62,12 @@ clean before build=false
 7=CURRENT_ALG
 
 [filelist]
-0=/home/sf/Devel/galculator/TODO
+0=/home/sf/Devel/galculator/src/galculator.h
+1=/home/sf/Devel/galculator/src/ui.c
+2=/home/sf/Devel/galculator/galculator.desktop.in
+3=/home/sf/Devel/galculator/src/callbacks.c
+4=/home/sf/Devel/galculator/ChangeLog
+5=/home/sf/Devel/galculator/src/calc_basic.c
 
 [Project Tree]
 0=0
