@@ -356,6 +356,7 @@
 		  <property name="width_request">40</property>
 		  <property name="height_request">25</property>
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="tooltip" translatable="yes">Add current display value to memory</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
@@ -424,6 +425,7 @@
 		  <property name="width_request">40</property>
 		  <property name="height_request">25</property>
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="tooltip" translatable="yes">Read from memory</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
