@@ -1,3 +1,12 @@
+2004-05-22 Simon Floery <chimaira@users.sf.net>
+	* ui/main_frame.glade: fixed "destroy" signal bug (thanks to andrew)
+	* galculator.desktop.in: updates (thanks to dag)
+	* src/ui.c, src/callbacks.c: disable MR and M+ button until there is 
+		sth to display (thanks to christian)
+
+2004-04-19 Simon Floery <chimaira@users.sf.net>
+	* updated ja.po and pt_BR.po
+
 ########################################
 # 2003-04-01 galculator 1.2.2 released #
 ########################################
